syntax = "proto3";

package aisession;

import "ai-message.proto";
import "common.proto";

message AiSession {
  optional string id = 1;
  string userId = 2;
  string title = 3;
  string lastMessage = 4;
  optional string createdAt = 5;
  optional string updatedAt = 6;
}


message CreateAiSessionAndFirstMessage {
  string userId = 1;
  string title = 2;
  string text = 3;
  bool isUser = 4;
}

message CreateSessionAndFirstMessageRequest {
  CreateAiSessionAndFirstMessage payload = 1;
}

message CreateSessionAndFirstMessageResponse {
  AiSession session = 1;
  aimessage.AiMessage message = 2;
}

message CreateSessionRequest {
  string userId = 1;
  string title = 2;
}

message AISessionResponse {
  AiSession session = 1;
}

message ListSessionsRequest {
  common.BaseQueries queries = 7;
  common.BaseHeaders headers = 8;
}

message ListSessionsResponse {
  repeated AiSession sessions = 1;
}

message UpdateSessionTitleRequest {
  string id = 1;
  string title = 2;
  string currentUserId = 3;
}

message DeleteSessionRequest {
  string id = 1;
  string currentUserId = 2;
}

service AiSessionService {
  rpc CreateSessionAndAddFirstMessage(CreateSessionAndFirstMessageRequest) returns (CreateSessionAndFirstMessageResponse);
  rpc CreateSession(CreateSessionRequest) returns (AISessionResponse);
  rpc ListSessions(ListSessionsRequest) returns (ListSessionsResponse);
  rpc UpdateSessionTitle(UpdateSessionTitleRequest) returns (AISessionResponse);
  rpc DeleteSession(DeleteSessionRequest) returns (common.MessageResponse);
}
