syntax = "proto3";

package auth;

import "user.proto";

message RegisterRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string phone = 4;
  string role = 5;
}

message RegisterResponseUser {
  string id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string role = 5;
}

message RegisterResponse {
  string message = 1;
  optional RegisterResponseUser user = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LogInResponse {
  string message = 1;
  optional user.User user = 3;
}

message ShakeHandRequest {
  string publicKey = 1;
  string userId = 2;
}

message ShakeHandResponse {
  string serverPublicKey = 1;
  string status = 2;
}

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LogInResponse);
  rpc ShakeHand(ShakeHandRequest) returns (ShakeHandResponse);
}

